[tool.poetry]
name = "censearch"
version = "0.2.0"
description = ""
authors = ["sudo-julia <jlearning@tuta.io>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
TwitterAPI = "^2.6.9"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
